more layout work, skill section overflow solved

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,7 @@
   grid-template-columns: 1fr 10fr 1fr;
 }
 
-@media (max-width: 700px) {
+@media (max-width: var(--media-size)) {
   #app{
     grid-template-columns: 1fr;
   }
